[package]
name = "nwrfc-rs"
version = "0.1.0"
authors = ["github.com/willtrnr"]
license = "MIT"
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
chrono = { version = "0.4", optional = true }
libc = "0.2"
log = "0.4"
widestring = "0.5"

[build-dependencies]
bindgen = "0.59"
