[package]
name = "nwrfc-rs"
version = "0.1.0"
authors = ["github.com/willtrnr"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
pool = [
  "async-trait",
  "deadpool",
  "deadpool-sync",
]

[dependencies]
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", optional = true }
deadpool = { version = "0.9", optional = true }
deadpool-sync = { version = "0.1", optional = true }
log = "0.4"
sapnwrfc-sys = { path = "../sapnwrfc-sys", version = "0.1" }

[build-dependencies]
bindgen = "0.59"
