[package]
name = "sapnwrfc-sys"
version = "0.0.1"
authors = ["William Turner <willtur.will@gmail.com>"]
edition = "2018"
description = "Native bindings to the libsapnwrfc library."
readme = "README.md"
repository = "https://github.com/willtrnr/saprfc-rs"
license = "MIT"
keywords = [
  "sap",
  "rfc",
  "netweaver",
  "sapnwrfc",
]
categories = [
  "external-ffi-bindings",
  "network-programming",
]
links = "sapnwrfc"

[build-dependencies]
bindgen = "0.59"
