[package]
name = "saprfc"
version = "0.0.1"
authors = ["William Turner <willtur.will@gmail.com>"]
edition = "2018"
description = "Bindings to libsapnwrfc to interact with SAP systems over RFC connections."
readme = "README.md"
repository = "https://github.com/willtrnr/saprfc-rs"
license = "MIT"
keywords = [
  "sap",
  "rfc",
  "netweaver",
  "sapnwrfc",
]
categories = [
  "api-bindings",
  "network-programming",
]

[dependencies]
async-trait = { version = "0.1", optional = true }
chrono = { version = "0.4", optional = true }
deadpool = { version = "0.9", optional = true }
deadpool-sync = { version = "0.1", optional = true }
sapnwrfc-sys = { path = "../sapnwrfc-sys", version = "0.0.1" }
log = "0.4"

[features]
default = []
pool = [
  "async-trait",
  "deadpool",
  "deadpool-sync",
]
